[package]
name = "grv-link-shrt"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
# Cloudflare hasn't released official D1 support for Rust yet
worker = { version = "0.3.2", features = ["d1", "http"] }
worker-macros = { version = "0.3.2", features = ['http'] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.67"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
